# cohere-ui

./: .gitignore  LICENSE  README.md  cohere_setup.py  gui.py  install_pkgs.bat  install_pkgs.sh  pyproject.toml  repack.bat  run_example_case.ipynb  setup.py  setup_hpc.py
cohere-defaults/: config  config_data  config_disp  config_instr  config_mp  config_prep  config_rec
cohere-scripts/: alien_tools.py  auto_data.py  beamline_preprocess.py  beamline_visualization.py  cdi_window.py  clean_ga.py  common.py  config_verifier.py  convertconfig.py  create_experiment.py  dm.py  everything.py  interpol.py  mp_recon.py  mpi_cmd.py  multipeak.py  prep_helper.py  preprocess.py  reconstruction_GA.py  reconstruction_populous.py  reconstruction_populous_GA.py  run_reconstruction.py  setup_34idc.py  simple_phasing.py  standard_preprocess.py  te_preprocess.py  view_reconstruction.py
cohere-scripts/beamlines/: mp_prep.py  prep.py
cohere-scripts/beamlines/Petra3_P10/: RSM_post_processing.py  detectors.py  instrument.py  preprocessor.py
cohere-scripts/beamlines/aps_1ide/: beam_tabs.py  beam_verifier.py  detectors.py  diffractometers.py  instrument.py
cohere-scripts/beamlines/aps_34idc/: beam_stuff.py  beam_tabs.py  beam_verifier.py  detectors.py  diffractometers.py  disp.py  dm_params.py  instrument.py  prep.py  preprocessor.py  spec_parser.py
cohere-scripts/beamlines/esrf_id01/: beam_tabs.py  beam_verifier.py  detectors.py  diffractometers.py  instrument.py  preprocessor.py  tst.py
cohere-scripts/beamlines/simple/: beam_verifier.py  detectors.py  diffractometers.py  instrument.py  preprocessor.py
cohere-scripts/common/: routines.py
cohere-scripts/inner_scripts/: common.py  reconstruction_GA.py  reconstruction_populous_GA.py  te_preprocess.py  te_rec.py  view_reconstruction.py
cohere-scripts/util/: util.py  viz_util.py
cohere_scripts/: beamline_preprocess.py  beamline_visualization.py  cdi_window.py  run_reconstruction.py  simple_phasing.py  standard_preprocess.py
cohere_scripts/beamlines/Petra3_P10/: beam_tabs.py  beam_verifier.py  detectors.py  diffractometers.py  instrument.py  p10_scan_reader.py  preprocessor.py
cohere_scripts/beamlines/aps_1ide/: beam_tabs.py  beam_verifier.py  (+4 more)
cohere_scripts/inner_scripts/: common.py  convertconfig.py  exceptions.py  mpi_cmd.py  multipeak.py  postprocess_utils.py  reconstruction_GA.py  reconstruction_populous.py  reconstruction_populous_ga.py  symdata.py  te_preprocess.py  te_rec.py
cohere_ui/: basic_no_framework_34idc.ipynb  beamline_preprocess.py  beamline_visualization.py  cdi_window.py  cohere_gui.py  copy_setup.py  create_aps34idc_experiment.py  create_experiment.py  everything.py  run_reconstruction.py  simple_phasing.py  standard_preprocess.py
cohere_ui/.ipynb_checkpoints/: basic_no_framework_34idc-checkpoint.ipynb
cohere_ui/api/: common.py  convertconfig.py  host_utils.py  mpi_cmd.py  multipeak.py  postprocess_utils.py  reconstruction_populous.py  reconstruction_populous_ga.py  te_preprocess.py  te_rec.py  view_reconstruction.py
docs-conf/: config  config_data  config_prep  config_rec
example/: example.spec
example_data/: example.spec
hpc_scripts/: G_mpi_job.sh  TE_mpi_job.sh  create_experiment.py  estimate.py  how_to_run  mpi_job.sh  phasing.py  polaris_request.sh  reconstruction_ga.py  reconstruction_multi.py  request_q.sh  set_affinity_gpu.sh  set_py_path.sh  setup.py  te_preprocess.py  te_rec.py
notebooks/: getting_started.ipynb  quickstart.ipynb
scripts/: AlienTools.py  alien_tools.py  beamline_preprocess.py  beamline_visualization.py  cdi_window.py  config_verifier.py  convertconfig.py  create_experiment.py  everything.py  format_data.py  run_disp.py  run_prep.py  run_prep_34idc.py  run_rec.py  run_reconstruction.py  setup_34idc.py
src/cohere_ui/: beamline_postprocess.py  beamline_preprocess.py  beamline_visualization.py  cohere_full.py  cohere_gui.py  cohere_reconstruction.py  copy_setup.py  create_aps34idc_experiment.py  everything.py  run_reconstruction.py  simple_phasing.py  standard_preprocess.py
user_space/: cdi_window.py  run_disp.py  run_prep_34idc.py  run_rec.py
(+382 files in other folders)
