[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cohere_ui"
version = "4.5.2"
authors = [
  { name="Barbara Frosik", email="bfrosik@anl.gov" },
  { name="Ross Harder", email="rharder@anl.gov" }
]
description = "cohere scripts"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]

dependencies = [
                'pyqt6',
                'scikit-image',
                'pyvista',
                'scipy',
                'notebook',
                'gputil',
                'pandas',
                'openpyxl',
                'xlsxwriter',
                'numpy>=2.0'
                ]

[project.optional-dependencies]
# Opt in to the Jupyter GUI deps with: pip install cohere-ui[jupyter]
# Headless users (CLI / Qt only) can skip these to avoid the widget stack.
jupyter = [
    'ipywidgets',
    'ipympl',
    'ipyfilechooser',
    'matplotlib',
    'trame',
    'trame-vtk',
    'trame-vuetify',
    'trame-jupyter-extension',
]
[tool.setuptools.package-data]
"cohere_ui.jupyter_gui.text" = ["*.yaml"]
# Opt in to the test stack with: pip install cohere-ui[jupyter,test]
# test = [
#     'pytest>=8',
#     'pytest-cov>=5',
#     'pytest-xdist>=3',
#     'nbmake>=1.5',
#     'ipykernel>=6',
# ]

[project.scripts]
beamline_preprocess = "cohere_ui.beamline_preprocess:main"
beamline_visualization = "cohere_ui.beamline_visualization:main"
beamline_postprocess = "cohere_ui.beamline_postprocess:main"
cohere_gui = "cohere_ui.cohere_gui:main"
copy_setup = "cohere_ui.copy_setup:main"
create_aps34idc_experiment = "cohere_ui.create_aps34idc_experiment:main"
everything = "cohere_ui.everything:main"
cohere_full = "cohere_ui.cohere_full:main"
run_reconstruction = "cohere_ui.run_reconstruction:main"
cohere_reconstruction = "cohere_ui.cohere_reconstruction:main"
simple_phasing = "cohere_ui.simple_phasing:main"
standard_preprocess = "cohere_ui.standard_preprocess:main"

[project.urls]
    Homepage = "https://github.com/AdvancedPhotonSource/cohere-ui"

[tool.sphinx-pyproject]
    extensions = [
        "sphinx.ext.autodoc",
        "sphinx.ext.napoleon",
        'sphinx.ext.intersphinx',
]

# pytest/ruff config lives in the repo-root pyproject.toml (run pytest from
# the repo root). The [test] extra above is enough on the cohere-ui side.
# testing will be included in future PRs

# [tool.coverage.run]
# source = ["src/cohere_ui/jupyter_gui"]
# branch = true
